--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <label>Prediction 1 - </label>
                     <p class="hand_gesture_name" id="result_gesture_name">
                     </p>
-                    <p class="hand" id="update_gesture"></p>
+                    <p class="hand" id="update_hand"></p>
                     <label>Prediction 2 - </label>
                     <p class="hand_gesture_name" id="result_gesture_name2">
                     </p>
